# cnmaps

./: .flake8  .gitignore  .readthedocs.yaml  .travis.yml  AGENTS.md  LICENSE  MANIFEST.in  PYPI.md  README.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.codex/skills/cnmaps/: SKILL.md
.codex/skills/cnmaps/agents/: openai.yaml
.github/: dependabot.yml
.github/workflows/: perf-test.yml  pypi-publish.yml  python-package-conda.yml  python-package-mac.yml  python-package-win.yml  python-package.yml
benchmark/: data.js
cnmaps/: __init__.py  data.py  drawing.py  geo.py  maps.py  mcp_server.py  names.py  provider.py  regions.py  sample.py
cnmaps/_bundled_skills/: __init__.py
cnmaps/_bundled_skills/cnmaps/: SKILL.md  __init__.py
cnmaps/data/: index.db
cnmaps/data/sample/: china-temp.nc  china-wind.nc
cnmaps_cli/: __init__.py  __main__.py
data/geojson.min/: Beijing.geojson  Guangdong.geojson  Hainan.geojson  Hebei.geojson  Henan.geojson  HongKong.geojson  InnerMongolia.geojson  Jiangsu.geojson  Jiangxi.geojson  Jilin.geojson  Liaoning.geojson  Macao.geojson  Qinghai.geojson  Shaanxi.geojson  Shanghai.geojson  Taiwan.geojson  Tibet.geojson  Yunnan.geojson  Zhejiang.geojson
data/geojson.min/default/: Anhui.geojson  ChinaLand2.geojson  Chongqing.geojson  Gansu.geojson  Guangdong.geojson  Hubei.geojson  Ningxia.geojson  Shanxi.geojson  Sichuan.geojson  Xinjiang.geojson
data/sample/: china_dem.nc
docs/: build_docs.sh  data.js
docs/source/: conf.py  index.rst
docs/source/_examples/: china_and_neighbors_borders.py  city_centroids_overview.py  country_centroids_overview.py  province_capitals_labels.py  province_centroids_overview.py  world_countries_borders_flat.py  world_countries_borders_globe.py  world_tech_map_centered_v2.py
docs/source/content/: api-ref.rst  changelog.rst  citation.rst  cli.rst  contributor-guide.rst  data-sources.rst  examples.rst  faq.rst  installation.rst  license.rst  mcp.rst  quick-start.rst  usage.rst
performance/: data.js
performance-v2/: data.js
requirements/: requirements-dev.txt  requirements-doc.txt
tests/: test_cli.py  test_docs_examples.py  test_drawing.py  test_drawing_simple.py  test_geo.py  test_issues.py  test_map.py  test_map_simple.py  test_mcp_server.py  test_perf.py  test_speed.py
tests/case/clip_clabel/: md5.json
tests/case/projections/: md5.json
tests/mapcase/: china-maskout-gcj02-fast.npy  china-maskout-wgs84-fast.npy  china-maskout-wgs84.npy  china-maskout.npy  maskout.npz  ningxia-maskout-gcj02.npy  ningxia-maskout-wgs84.npy
(+3313 files in other folders)
