[tool.poetry]
name = "cnmaps"
version = "2.0.0"
description = "A python package to draw china maps more easily"
authors = ["Clarmy <clarmyleewt@gmail.com>"]
license = "BSD 3-Clause License"
readme = "PYPI.md"
homepage = "https://github.com/cnmetlab/cnmaps"
exclude = ["**/.DS_Store"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
cnmaps-data = ">=1.1.1"
shapely = ">=2.0.0"
geojson = ">=2.5.0"
fiona = ">=1.8.20"
geopandas = ">=0.10.2"
cartopy = ">=0.22.0"
matplotlib = ">=3.4.2"
numpy = ">=1.21.5,<3.0"
netcdf4 = ">=1.5.8,<1.8"
orjson = ">=3.7.11"
numba = ">=0.56.0"
scipy = ">=1.8"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
ipython = "^8.14.0"
pytest-benchmark = "^4.0.0"
pytest-memray = { version = "^1.6.0", markers = "sys_platform != 'win32'" }

[tool.pytest.ini_options]
markers = [
    "heavy: 全网格等耗时测试；默认 CI 使用 -m \"not heavy\" 跳过",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
